@@ -259,6 +259,9 @@
 <MODE NAME="literate-haskell"	FILE="literate-haskell.xml"
 				FILE_NAME_GLOB="*.lhs" />
 
+<MODE NAME="logtalk" FILE="logtalk.xml"
+            FILE_NAME_GLOB="*.lgt" />
+
 <MODE NAME="lotos"		FILE="lotos.xml"
 				FILE_NAME_GLOB="*.{lot,lotos}"/>
 
